# textual_clock

./: .gitignore  README.md  app.py  ascii_clock.py  clock.py  print_clock.py  pyproject.toml  stopwatch.css
