[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Cassandra Cole", email = "null"},
]
dependencies = [
    "textual>=0.5.0",
    "numpy>=1.23.5",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
